add some models

--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ccf24025",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "72ef5b91",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "       0.83469388, 0.85102041, 0.86734694, 0.88367347, 0.9       ])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cac73e32",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
        "       0.6468537 , 0.60728083, 0.56466958, 0.51870859, 0.46899559])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,17 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e2f4a92d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1836c779f70>]"
+       "[<matplotlib.lines.Line2D at 0x23ed0a0d8e0>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "cea93715",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "9bccb6d6",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "4   absent    1       4     15"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "9fd08536",
    "metadata": {},
    "outputs": [
@@ -273,17 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d1e0f1bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1863110ba90>"
+       "<seaborn.axisgrid.PairGrid at 0x23ed11b0ac0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -306,17 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "1446d27d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1862e9f88b0>"
+       "<seaborn.axisgrid.PairGrid at 0x23ed117efd0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -339,11 +339,345 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6136b211",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7219280948873623"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = 0.2\n",
+    "p*np.log2(1/p) + (1-p)*np.log2(1/(1-p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "30dc710a",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "69afe5ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = df['Kyphosis']\n",
+    "x = df.drop('Kyphosis', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "41a1e0a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d8f8ba76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "583c1065",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtree = DecisionTreeClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "0299bea9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier()"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dtree.fit(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a35bb83f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['present', 'absent', 'absent', 'present', 'absent', 'absent',\n",
+       "       'absent', 'absent', 'absent', 'absent', 'present', 'absent',\n",
+       "       'absent', 'absent', 'absent', 'absent', 'absent', 'absent',\n",
+       "       'absent', 'absent', 'absent', 'absent', 'absent', 'present',\n",
+       "       'present'], dtype=object)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre = dtree.predict(x_test)\n",
+    "pre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5a9447bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "04dfd039",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[18  3]\n",
+      " [ 2  2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test, pre))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "544f40d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      absent       0.90      0.86      0.88        21\n",
+      "     present       0.40      0.50      0.44         4\n",
+      "\n",
+      "    accuracy                           0.80        25\n",
+      "   macro avg       0.65      0.68      0.66        25\n",
+      "weighted avg       0.82      0.80      0.81        25\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, pre))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "210fdb04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20/25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "66be49c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random forest\n",
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "7afc9eac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfc = RandomForestClassifier(n_estimators=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "478f1831",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(n_estimators=300)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfc.fit(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "20df853f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['absent', 'absent', 'absent', 'present', 'absent', 'absent',\n",
+       "       'absent', 'absent', 'absent', 'absent', 'present', 'absent',\n",
+       "       'absent', 'absent', 'absent', 'absent', 'absent', 'absent',\n",
+       "       'absent', 'absent', 'absent', 'absent', 'present', 'present',\n",
+       "       'present'], dtype=object)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre2 = rfc.predict(x_test)\n",
+    "pre2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "7b17d56f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[18  3]\n",
+      " [ 2  2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test, pre2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "181a936f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      absent       0.90      0.86      0.88        21\n",
+      "     present       0.40      0.50      0.44         4\n",
+      "\n",
+      "    accuracy                           0.80        25\n",
+      "   macro avg       0.65      0.68      0.66        25\n",
+      "weighted avg       0.82      0.80      0.81        25\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, pre2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8d95cf8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "absent     64\n",
+       "present    17\n",
+       "Name: Kyphosis, dtype: int64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Kyphosis'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15cceb4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# XGBoost?\n"
+   ]
   }
  ],
  "metadata": {
