--- a/decision_tree.ipynb
+++ b/decision_tree.ipynb
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "30dc710a",
+   "id": "ed332cf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "69afe5ad",
+   "id": "01629da3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "41a1e0a4",
+   "id": "054e542d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d8f8ba76",
+   "id": "e58f7612",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "583c1065",
+   "id": "ce3d8b18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0299bea9",
+   "id": "bb2a241c",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a35bb83f",
+   "id": "dc04fdc3",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "5a9447bc",
+   "id": "8dc698fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "04dfd039",
+   "id": "48bed65c",
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "544f40d4",
+   "id": "422fb0b0",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "210fdb04",
+   "id": "107e2eef",
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "66be49c6",
+   "id": "81c361e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "7afc9eac",
+   "id": "fd0400ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "478f1831",
+   "id": "cb9d6715",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "20df853f",
+   "id": "2d23fed7",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "7b17d56f",
+   "id": "15953041",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "181a936f",
+   "id": "0f5812ca",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8d95cf8c",
+   "id": "0347dd82",
    "metadata": {},
    "outputs": [
     {
@@ -671,13 +671,379 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15cceb4b",
+   "execution_count": 48,
+   "id": "1798c2bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Package(s) not found: xgboost\n"
+     ]
+    }
+   ],
+   "source": [
+    "# XGBoost?\n",
+    "!pip show xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "50c1bee7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting xgboost\n",
+      "  Downloading xgboost-1.6.2-py3-none-win_amd64.whl (125.4 MB)\n",
+      "     ------------------------------------- 125.4/125.4 MB 13.9 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy in c:\\users\\binh_hong_ngoc\\anaconda3\\lib\\site-packages (from xgboost) (1.20.3)\n",
+      "Requirement already satisfied: scipy in c:\\users\\binh_hong_ngoc\\anaconda3\\lib\\site-packages (from xgboost) (1.7.1)\n",
+      "Installing collected packages: xgboost\n",
+      "Successfully installed xgboost-1.6.2\n",
+      "\n",
+      "[notice] A new release of pip available: 22.2 -> 22.2.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "912a6a49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# XGBoost?\n"
+    "from xgboost import XGBClassifier"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "77723d65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = XGBClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "2444d965",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Kyphosis</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Start</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>absent</td>\n",
+       "      <td>71</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>absent</td>\n",
+       "      <td>158</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>present</td>\n",
+       "      <td>128</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>absent</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>absent</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Kyphosis  Age  Number  Start\n",
+       "0   absent   71       3      5\n",
+       "1   absent  158       3     14\n",
+       "2  present  128       4      5\n",
+       "3   absent    2       5      1\n",
+       "4   absent    1       4     15"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a502bd87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Kyphosis</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Start</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>158</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>128</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Kyphosis  Age  Number  Start\n",
+       "0         0   71       3      5\n",
+       "1         0  158       3     14\n",
+       "2         1  128       4      5\n",
+       "3         0    2       5      1\n",
+       "4         0    1       4     15"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = df.replace(['absent', 'present'], [0,1])\n",
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "9bb201ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = df2['Kyphosis']\n",
+    "x = df2.drop('Kyphosis', axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "f4e29f82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(x,y,test_size=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "7f256f86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', callbacks=None,\n",
+       "              colsample_bylevel=1, colsample_bynode=1, colsample_bytree=1,\n",
+       "              early_stopping_rounds=None, enable_categorical=False,\n",
+       "              eval_metric=None, gamma=0, gpu_id=-1, grow_policy='depthwise',\n",
+       "              importance_type=None, interaction_constraints='',\n",
+       "              learning_rate=0.300000012, max_bin=256, max_cat_to_onehot=4,\n",
+       "              max_delta_step=0, max_depth=6, max_leaves=0, min_child_weight=1,\n",
+       "              missing=nan, monotone_constraints='()', n_estimators=100,\n",
+       "              n_jobs=0, num_parallel_tree=1, predictor='auto', random_state=0,\n",
+       "              reg_alpha=0, reg_lambda=1, ...)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "bf28a50f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0,\n",
+       "       0, 0, 0])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre3 = model.predict(x_test)\n",
+    "pre3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "08318390",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[18  2]\n",
+      " [ 3  2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test, pre3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "fc2a8966",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.90      0.88        20\n",
+      "           1       0.50      0.40      0.44         5\n",
+      "\n",
+      "    accuracy                           0.80        25\n",
+      "   macro avg       0.68      0.65      0.66        25\n",
+      "weighted avg       0.79      0.80      0.79        25\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, pre3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9b5e99d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
